linux mvn javafx:run started working.